tests/aster/x/mochi/rosetta/dragon-curve.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/dragon-curve.mochi:12:13

 12 |     let c = substring(seq, j, j + 1)
    |             ^

help:
  Declare substring before use
